# dotfiles_rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci_cd_workflow.yml  tagging.yml
config/: default.toml  studio-custom.toml  studio.home.conecrazy.ca-custom.toml
scripts/: create_tag.sh
src/: env_detection.rs  main.rs
src/tasks/: file_linking.rs  install_homebrew.rs  install_rosetta.rs  mod.rs
