[package]
name = "rosetta_file_linker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
hostname = "0.3"

[build]
target-dir = "target"

[profile.release]
incremental = false
lto = "fat"

[workspace]
members = ["src"]

[package.metadata]
description = "A tool to install Rosetta and link files based on OS-specific configurations."
homepage = "https://github.com/brujack/dotfiles_rust"
repository = "https://github.com/brujack/dotfiles_rust"
license = "Apache-2.0"

[package.metadata.github-actions]
# GitHub Actions workflow configuration
enable = true
actions = ["test", "build"]

[[bin]]
name = "setup_env"
path = "src/main.rs"
